# log

./: .gitignore  CMakeLists.txt  README.md
log/config/: PLogSettings.txt
log/include/: log.h  logqueue.h  logsettings.h  plog.h
log/src/: log.cpp  logqueue.cpp  logsettings.cpp
log/test/: main.cpp
log/utils/: types.h  utils.cpp  utils.h
